# clicker-game

./: Cargo.toml
src/: main.rs
