[package]
name = "clicker-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = [
  "wayland",
  "dynamic_linking",
  "embedded_watcher",
] }
bevy_rapier2d = "0.29.0"
rand = "0.9.0"

[profile.dev]
incremental = true
opt-level = 1
debug = 1
lto = "thin"
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
